--- a/templates/official/official.html
+++ b/templates/official/official.html
@@ -1387,7 +1387,7 @@
         // Logout function
         function logout() {
             if (confirm('Are you sure you want to logout?')) {
-                window.location.href = 'index.html';
+                window.location.href = 'login.html';
             }
         }
         
