--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -511,7 +511,7 @@
         <a href="{{ url_for('user.landing') }}" class="btn btn-primary">
             <i class="fas fa-user"></i> My Profile
         </a>
-        <a href="{{ url_for('user.landing') }}" class="btn btn-primary">
+        <a href="login.html" class="btn btn-primary">
             <i class="fas fa-sign-out-alt"></i> Logout
         </a>
     </div>
