--- a/templates/verifier/dashboard.html
+++ b/templates/verifier/dashboard.html
@@ -724,7 +724,12 @@
             </div>
             <div class="user-actions">
                 <button class="btn btn-primary" id="profile-btn"><i class="fas fa-user"></i> Verifier Profile</button>
-                <button class="btn btn-primary" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</button>
+                
+
+
+             <a href="login.html" class="btn btn-primary">
+            <i class="fas fa-sign-out-alt"></i> Logout
+        </a>
             </div>
         </header>
         
