--- a/templates/Login.html
+++ b/templates/Login.html
@@ -46,6 +46,7 @@
                     <div class="btn-container">
                         <a href="#" class="btn" onclick="openLoginModal('official')"><span>Official Login</span> <i class="fas fa-arrow-right"></i></a>
                     </div>
+                    <p>Use username:- official1 and password:- 123456</p>
                 </div>
             </div>
             
@@ -56,6 +57,7 @@
                 </div>
                 <div class="card-body">
                     <p>Verify and validate ocean hazard reports and monitoring data accuracy.</p>
+                    <p>username:-verifier1 and password:- verifier123</p>
                     <div class="btn-container">
                         <a href="#" class="btn" onclick="openLoginModal('verifier')"><span>Verifier Login</span> <i class="fas fa-arrow-right"></i></a>
                     </div>
